# hotpot

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dashboard.rs  lib.rs  main.rs  totp.rs
tests/: lib.rs
tests/integration/: cli_commands.rs  file_storage.rs  mod.rs
tests/integration/fixtures/: malformed.json  test_accounts.json
