[package]
name = "hotpot"
version = "0.1.1"
edition = "2024"
authors = ["yen"]
description = "A simple CLI for TOTP-based 2FA"
license = "MIT"
repository = "https://github.com/yen223/hotpot"
keywords = ["totp", "2fa", "authentication", "cli", "security"]
categories = ["command-line-utilities", "authentication"]
readme = "README.md"

[dependencies]
clap = { version = "4.3.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
base32 = "0.4"
hmac = "0.12.1"
digest = "0.10.7"
sha1 = "0.10.6"
sha2 = "0.10.8"
keyring = "2.0"
rpassword = "7.2"
qrcode = { version = "0.12", features = ["image"] }
image = "0.25"
rqrr = "0.10"
url = "2.4"
crossterm = "0.29"
fuzzy-matcher = "0.3"
arboard = "3.3"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
